[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zero-reveal-dpp"
version = "0.1.0"
description = "Privacy-preserving Digital Product Passports with Salted Merkle Trees"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Zero-Reveal-DPP Contributors" }
]
keywords = [
    "digital-product-passport",
    "dpp",
    "eu-battery-regulation",
    "merkle-tree",
    "privacy",
    "selective-disclosure",
    "cryptography"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]

[project.optional-dependencies]
qr = ["qrcode[pil]>=7.4"]
crypto = ["cryptography>=41.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "hypothesis>=6.0",
]
all = [
    "zero-reveal-dpp[qr,crypto,dev]"
]

[project.urls]
Homepage = "https://github.com/your-org/zero-reveal-dpp"
Documentation = "https://github.com/your-org/zero-reveal-dpp#readme"
Repository = "https://github.com/your-org/zero-reveal-dpp"

[tool.hatch.build.targets.wheel]
packages = ["src/zero_reveal_dpp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/zero_reveal_dpp"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise ImportError",
    "if TYPE_CHECKING:",
]
